fix: address Copilot review — OWS, UTF-8 validation, key/token checks
- Parser: use skipOWS() (SP+HTAB) instead of skipSP() for top-level
  parse entry points and ensureEmpty(), per RFC 8941 OWS rules
- Parser: DisplayString flushes percent-encoded bytes through a strict
  CharsetDecoder (CodingErrorAction.REPORT) to reject invalid UTF-8
- Serializer: validate dictionary keys and parameter keys against
  RFC 8941 key grammar before appending (prevents header injection)
- Serializer: validate Token values against RFC 8941 token grammar
- SfByteSequence: defensive clone() in constructor and accessor
- SfList: use List.copyOf() for true defensive copy
- Test: use StandardCharsets.UTF_8 for byte[] to String conversion

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>